--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     
     <!-- Main CSS File -->
     <link href="./assets/css/main.css" rel="stylesheet">
-    <!-- <link href="./assets/css/admin-main.css" rel="stylesheet"> -->
+    <link href="./assets/css/Responsive.css" rel="stylesheet">
 
 
   </head>
